crates/apollo-compiler/test_data/diagnostics/0087_fragment_type_condition_on_composite_types.txt
Error: field selection of scalar type `Int` must not have subselections
   ╭─[0087_fragment_type_condition_on_composite_types.graphql:5:5]
   │
 5 │     price { ...fragOnScalar }
   │     ────────────┬────────────  
   │                 ╰────────────── remove subselections here
   │ 
   │ Note: path to the field: `query Query → products → price`
───╯
Error: inline fragment must have a composite type in its type condition
   ╭─[0087_fragment_type_condition_on_composite_types.graphql:7:5]
   │
 7 │ ╭─▶     ... on Int {
   ┆ ┆   
 9 │ ├─▶     }
   │ │           
   │ ╰─────────── fragment declares unsupported type condition `Int`
   │     
   │     Help: fragments cannot be defined on enums, scalars and input objects
───╯
Error: type `Int` does not have a field `name`
     ╭─[0087_fragment_type_condition_on_composite_types.graphql:8:7]
     │
   8 │       name
     │       ──┬─  
     │         ╰─── field `name` selected here
     │
     ├─[built_in.graphql:129:8]
     │
 129 │ scalar Int
     │        ─┬─  
     │         ╰─── type `Int` defined here
     │ 
     │ Note: path to the field: `query Query → products → name`
─────╯
Error: fragment `fragOnScalar` must be used in an operation
    ╭─[0087_fragment_type_condition_on_composite_types.graphql:21:1]
    │
 21 │ ╭─▶ fragment fragOnScalar on Int {
    ┆ ┆   
 23 │ ├─▶ }
    │ │       
    │ ╰─────── `fragOnScalar` is defined here
    │     
    │     Help: fragment `fragOnScalar` must be used in an operation
────╯
Error: type `Int` does not have a field `name`
     ╭─[0087_fragment_type_condition_on_composite_types.graphql:22:3]
     │
  22 │   name
     │   ──┬─  
     │     ╰─── field `name` selected here
     │
     ├─[built_in.graphql:129:8]
     │
 129 │ scalar Int
     │        ─┬─  
     │         ╰─── type `Int` defined here
     │ 
     │ Note: path to the field: `fragment fragOnScalar → name`
─────╯
Error: inline fragment must have a composite type in its type condition
    ╭─[0087_fragment_type_condition_on_composite_types.graphql:26:3]
    │
 26 │ ╭─▶   ... on Int {
    ┆ ┆   
 28 │ ├─▶   }
    │ │         
    │ ╰───────── fragment declares unsupported type condition `Int`
    │     
    │     Help: fragments cannot be defined on enums, scalars and input objects
────╯
Error: type `Int` does not have a field `name`
     ╭─[0087_fragment_type_condition_on_composite_types.graphql:27:5]
     │
  27 │     name
     │     ──┬─  
     │       ╰─── field `name` selected here
     │
     ├─[built_in.graphql:129:8]
     │
 129 │ scalar Int
     │        ─┬─  
     │         ╰─── type `Int` defined here
     │ 
     │ Note: path to the field: `fragment inlineFragOnScalar → name`
─────╯

